--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@angular/compiler": "^17.2.0",
     "@angular/core": "^17.2.0",
     "@angular/forms": "^17.2.0",
+    "@angular/google-maps": "^17.3.2",
     "@angular/material": "^17.2.2",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@googlemaps/js-api-loader": "^1.16.6",
     "@ng-bootstrap/ng-bootstrap": "^14.0.0",
     "@popperjs/core": "^2.11.8",
+    "@stripe/stripe-js": "^3.2.0",
     "bootstrap": "^5.2.2",
     "ng-multiselect-dropdown": "^1.0.0",
+    "ngx-stripe": "^17.1.1",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
