--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "@angular/core": "^17.2.0",
     "@angular/forms": "^17.2.0",
     "@angular/google-maps": "^17.3.2",
+    "@angular/localize": "^18.0.3",
     "@angular/material": "^17.2.2",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@googlemaps/js-api-loader": "^1.16.6",
     "@ng-bootstrap/ng-bootstrap": "^14.0.0",
+    "@ng-select/ng-select": "^13.2.0",
     "@popperjs/core": "^2.11.8",
     "@stripe/stripe-js": "^3.2.0",
     "bootstrap": "^5.2.2",
+    "jwt-decode": "^4.0.0",
     "ng-multiselect-dropdown": "^1.0.0",
     "ngx-stripe": "^17.1.1",
     "ngx-toastr": "^18.0.0",
